--- a/output/loop_return_confirmation_en.html
+++ b/output/loop_return_confirmation_en.html
@@ -378,11 +378,11 @@
     </style>
   </head>
   <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style="-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;    background-color: #FEFCF6;">
-    <div style="max-width:560px; margin: auto; background-color: #FEFCF6;">
+    <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
     <br><br>
 <tr>
   <td style="margin-bottom: 60px;padding: 30px 0;" align="center">
-    <div class="img-cont" style="    display: flex;  justify-content: center; width: 560px">
+    <div class="img-cont" style="    display: flex;  justify-content: center; width: 500px">
       <img src="https://cdn.shopify.com/shopify-email/80o85godyj88622sg7eh16o69bbh.jpg?width=960&amp;height=960" alt="Adam Lippes" width="225" height="136" style="margin: auto;">
     </div>
 
@@ -394,9 +394,9 @@
   <td align="center" style="padding-bottom: 30px;">
     <table width="100%" style="text-align: center;">
       <tr>
-        <td style="width: 168px"><a href="#" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">Shop</a></td>
-        <td style="width: 168px"><a href="#" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">About</a></td>
-        <td style="width: 168px"><a href="#" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">Contact</a></td>
+        <td style="width: 168px"><a href="https://adamlippes.com/collections/woman-view-all" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">Shop</a></td>
+        <td style="width: 168px"><a href="https://adamlippes.com/pages/about-adam-lippes" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">About</a></td>
+        <td style="width: 168px"><a href="mailto:customerservice@adamlippes.com" style="max-width: 168px;text-align: center;text-decoration: none; color: #000; font-weight: 500; letter-spacing: 1.5px;">Contact</a></td>
       </tr>
     </table>
   </td>
@@ -404,18 +404,18 @@
 
     
 <table role="presentation" width="100%" bgcolor="#FEFCF6" style="background-color: #FEFCF6;" cellpadding="0" cellspacing="0" border="0">
-  <tr>
+  <tr >
     <td align="center">
       <table class="container" role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" >
 
 
-        <tr>
+        <tr style="padding-left: 20px; padding-right: 20px;">
           <td width="100%" valign="top" style="padding-top: 60px;">
           <h1 style="font-size: 28px; line-height: 125%; text-align:center; color: #222222; font-weight: 600; display: block;">
               Your return has been submitted.
           </h1>
 
-            <p style="padding-top: 15px; text-align: left; display: block;">Please return your item(s) by {{return_by}}. You can review your shipping instructions by viewing your return with the link below.</p>
+            <p style="padding-left: 20px; padding-right: 20px;padding-top: 15px; text-align: left; display: block;">Please return your item(s) by {{return_by}}. You can review your shipping instructions by viewing your return with the link below.</p>
           </td>
         </tr>
         <!-- //End Thank you text -->
@@ -513,19 +513,19 @@
     <tr>
       <th valign="top" style="mso-line-height-rule: exactly;">
         <center style="width: 100%;">
-        <table border="0" width="620" cellpadding="0" cellspacing="0" align="center" style="width: 620px; min-width: 620px; max-width: 620px; direction: ltr; Margin: auto;" class="email-container" role="presentation">
+        <table border="0" width="620" cellpadding="0" cellspacing="0" align="center" style="width: 500px; min-width: 500px; max-width: 500px; direction: ltr; Margin: auto;" class="email-container" role="presentation">
           <tbody>
             <tr>
               <th valign="top" class="container_border" style="mso-line-height-rule: exactly;">
                 <!-- BEGIN : SECTION : FOOTER -->
                 <table class="sections_container footer" data-id="footer" id="section-footer" border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
                   <tr>
-                    <td class="section_border" style="mso-line-height-rule: exactly; padding: 45px 30px 30px;" bgcolor="#fefcf6">
+                    <td class="section_border" style="mso-line-height-rule: exactly; padding: 45px 20px 30px;" bgcolor="#fefcf6">
                       <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
                         <tr>
                           <th class="column_footer_logo section_content" width="50%" style="mso-line-height-rule: exactly; padding: 8px 30px;" align="left" bgcolor="#fefcf6">
                             <!-- Footer Logo : BEGIN -->
-                            <a href="{% capture link %}https://adamlippes.com/{% endcapture %} {{ link }}" target="_blank" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
+                            <a href="https://adamlippes.com/" target="_blank" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
                             <img src="https://cdn.filestackcontent.com/api/file/fVdwxQyMT9CeyvqpH19I/convert?fit=max&w=240" class="footer_logo " alt="{{shop_name}}" width="120" border="0" style="width: 120px; height: auto !important; display: block; text-align: left; padding-bottom: 30px; Margin: 0;">
                             <!-- Footer Logo : END -->
                           </a>
@@ -533,7 +533,7 @@
                       </tr>
                       <tr>
                         <!-- BEGIN : 2 COLUMNS : SHOP_BLOCK -->
-                        <th class="section_content" style="mso-line-height-rule: exactly; padding: 8px 30px;" bgcolor="#fefcf6">
+                        <th class="section_content" style="mso-line-height-rule: exactly; padding: 8px 20px;" bgcolor="#fefcf6">
                           <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center" style="min-width: 100%; direction: ltr;" role="presentation">
                             <tr>
                               <!-- BEGIN : Column 1 of 2 : SHOP_BLOCK -->
@@ -542,7 +542,7 @@
                                   <!-- Store Website : BEGIN -->
                                   <tr>
                                     <th class="column_shop_block1 " width="100%" style="mso-line-height-rule: exactly; padding-right: 15px; font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Arial,'Poppins'; font-size: 14px; line-height: 28px; font-weight: 300; color: #000000; text-transform: none; padding-bottom: 0; padding-top: 0;" align="left" bgcolor="#fefcf6" valign="top">
-                                      <a href="{% capture link %}{{shop.url}}{% endcapture %}{% if link contains shop.domain %}{% assign split_link = link | split: question_mark %}{{ split_link[0] }}?{{ default_utms }}&utm_content=footer-website-link{% if split_link[1] != blank %}&{{ split_link[1] }}{% endif %}{% else %}{{ link }}{% endif %}" target="_blank" data-key="section_shop_block1" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px; font-weight: 300; text-transform: none;">ADAMLIPPES.COM</a>
+                                      <a href="https://adamlippes.com/" target="_blank" data-key="section_shop_block1" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px; font-weight: 300; text-transform: none;">ADAMLIPPES.COM</a>
                                     </th>
                                   </tr>
                                   <!-- Store Website : END -->
@@ -575,13 +575,13 @@
                                       column_shop_social_icons
                                       " width="100%" style="mso-line-height-rule: exactly; padding-left: 15px;" align="left" bgcolor="#fefcf6" valign="top">
                                       <a class="social-link" href="https://www.facebook.com/adamlippes/" target="_blank" title="Facebook" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
-                                        <img width="38" class="social-icons" alt="Facebook" src="https://www.orderlyemails.com/facebook_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 30px 30px 0;">
+                                        <img width="38" class="social-icons" alt="Facebook" src="https://www.orderlyemails.com/facebook_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 20px 0px 0;">
                                       </a>
                                       <a class="social-link" href="https://www.instagram.com/adamlippes/" target="_blank" title="Instagram" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
-                                        <img width="38" class="social-icons" alt="Instagram" src="https://www.orderlyemails.com/instagram_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 30px 30px 0;">
+                                        <img width="38" class="social-icons" alt="Instagram" src="https://www.orderlyemails.com/instagram_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 20px 0px 0;">
                                       </a>
                                       <a class="social-link" href="https://www.pinterest.com/adamlippes/" target="_blank" title="Pinterest" style="color: #000000; text-decoration: none !important; text-underline: none; font-size: 14px;">
-                                        <img width="38" class="social-icons" alt="Pinterest" src="https://www.orderlyemails.com/pinterest_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 30px 30px 0;">
+                                        <img width="38" class="social-icons" alt="Pinterest" src="https://www.orderlyemails.com/pinterest_1.png" style="width: 38px; height: auto !important; vertical-align: middle; padding: 8px 20px 0px 0;">
                                       </a>
                                     </th>
                                   </tr>
