--- a/output/order_cancelled_en.html
+++ b/output/order_cancelled_en.html
@@ -377,10 +377,11 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style="-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
-        <!--[if !mso 9]><!-->
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
+    <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
+          <!--[if !mso 9]><!-->
 
-    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">{{ missing t.order_cancelled.iftext }}
+    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">This is a confirmation email notifying you that your order or part of your order has now been cancelled.
 
 
     </div>
@@ -390,7 +391,7 @@
     {% capture question_mark %}?{% endcapture %}
     <!-- SENSE -->
 
-    <!-- BEGIN: CONTAINER -->
+      <!-- BEGIN: CONTAINER -->
 <table class="container container_header" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
   <tbody>
     <tr>
@@ -463,7 +464,7 @@
 <!-- END : CONTAINER -->
 
 
-    <!-- BEGIN: CONTAINER -->
+      <!-- BEGIN: CONTAINER -->
 <table class="container container_main" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
   <tbody>
     <tr>
@@ -601,7 +602,7 @@
                                               </th>
                                             </tr>
                                             {% for line_item in line_items %}
-                                              {% if line_item.quantity != 0 or line_item.product.vendor != ‘Route’ %}
+                                              {% if line_item.quantity != 0 or line_item.product.vendor != 'Route' %}
                                                 <!-- Bold 2 -->
                                               {% capture line_variant_id1 %}{{ line_item.variant_id }}{% endcapture %}
                                               {% assign adjusted_item_price = line_item.price | default: 0 %}
@@ -690,7 +691,7 @@
 </table>
 <!-- END : CONTAINER -->
 
-    <!-- BEGIN: CONTAINER -->
+      <!-- BEGIN: CONTAINER -->
 <table class="container container_footer" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
   <tbody>
     <tr>
@@ -796,6 +797,7 @@
 </tbody>
 </table>
 
+    </div>
   </body>
 </html>
 
