--- a/output/loop_return_confirmation_en.html
+++ b/output/loop_return_confirmation_en.html
@@ -377,7 +377,7 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style="-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;    background-color: #FEFCF6;">
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" style=" background-color: #F5F5F5;" bgcolor="#F5F5F5" style="-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;    background-color: #FEFCF6;">
     <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
     <br><br>
 <tr>
