--- a/output/order_edited_ja.html
+++ b/output/order_edited_ja.html
@@ -377,10 +377,11 @@
         }
     </style>
   </head>
-  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style="-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
-        <!--[if !mso 9]><!-->
+  <body class="body " id="body" left Margin="0" topMargin="0" Marginwidth="0" Marginheight="0" bgcolor="#fefcf6" style=" background-color: #F5F5F5;-webkit-text-size-adjust: none; -ms-text-size-adjust: none; Margin: 0; padding: 0;">
+       <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
+            <!--[if !mso 9]><!-->
 
-    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">{{ missing t.order_edited.iftext }}
+    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;"> ご注文内容が一部更新されました。最新のご注文内容は以下のとおりですので、ご確認ください。.
 
 
     </div>
@@ -390,7 +391,7 @@
     {% capture question_mark %}?{% endcapture %}
     <!-- SENSE -->
 
-     <!-- BEGIN: CONTAINER -->
+         <!-- BEGIN: CONTAINER -->
             <table class="container container_header" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
               <tbody>
                 <tr>
@@ -461,7 +462,7 @@
             <!-- END : CONTAINER -->
 
 
-    
+        
             <!-- BEGIN: CONTAINER -->
             <table class="container container_main" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
               <tbody>
@@ -831,7 +832,7 @@
               </table>
               <!-- END : CONTAINER -->
 
-                    <!-- BEGIN: CONTAINER -->
+                        <!-- BEGIN: CONTAINER -->
                 <table class="container container_footer" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; min-width: 100%; direction: ltr;" role="presentation" bgcolor="#fefcf6">
                   <tbody>
                     <tr>
@@ -936,6 +937,7 @@
                 </table>
                 <!-- END : CONTAINER -->
 
+      </div>
   </body>
 </html>
 
