--- a/output/order_shipping_confirmation_en.html
+++ b/output/order_shipping_confirmation_en.html
@@ -381,7 +381,7 @@
     <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
           <!--[if !mso 9]><!-->
 
-    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">{{ missing t.order_shipping_confirmation.iftext }}
+    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">We're happy to let you know that your order has been shipped!
 
 
     </div>
