--- a/output/payment_error_ja.html
+++ b/output/payment_error_ja.html
@@ -381,7 +381,7 @@
        <div style="max-width:500px; margin: auto; background-color: #FEFCF6;">
             <!--[if !mso 9]><!-->
 
-    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">You added items to your shopping cart but the payment couldn&#8217;t be processed. You haven&#8217;t been charged.
+    <div style="display: none; overflow: hidden; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; mso-hide: all;">ショッピングカートに商品を追加されましたが、お支払いの処理が完了しませんでした。
 
 
     </div>
